# SP-Graphs

./: .gitignore  CMakeLists.txt  IPathFinder.hpp  Makefile  README.md  graph.cpp  graph.hpp  malla.cpp  map.cpp  map.tpp  mapa  mapa.cpp  utilities.cpp  utilities.hpp
Malla/: Makefile  csv_to_node.cpp  edge_to_csv.cpp  generar_edges.cpp  main_batch.cpp  malla.cpp
STL/: map.hpp  vector.hpp
algoritmos/: unsa_algoritmos.hpp
algoritmos/AStar/: AStar.cpp  AStar.hpp
algoritmos/BFS/: BFS.cpp  BFS.hpp
algoritmos/BestFS/: BestFS.hpp  BestFs.cpp
algoritmos/DFS/: DFS.cpp  DFS.hpp
algoritmos/Dijkstra/: Dijkstra.cpp  Dijkstra.hpp
data/mapa1/: edges.csv  etiquetas.csv  nodes.csv  ways.csv
data/mapa2/: edges.csv  etiquetas.csv  nodes.csv  ways.csv
data/mapa3/: edges.csv  etiquetas.csv  nodes.csv  ways.csv
data/mapa4/: edges.csv  nodes.csv  ways.csv
data/mapa5/: edges.csv  nodes.csv  ways.csv
unsa/: unsa.hpp
unsa/array/: array.hpp  array.tpp
unsa/hash/: hash.hpp  hash.tpp
unsa/linked_List/: linked_list.hpp  linked_list.tpp
unsa/map/: map.hpp  map.tpp  map_iterator.hpp
unsa/math/: math.hpp
unsa/min_heap/: min_heap.hpp  min_heap.tpp
unsa/min_max/: min_max.hpp
unsa/pair/: pair.hpp  pair.tpp
unsa/priority_queue/: priority_queue.hpp  priority_queue.tpp
unsa/queue/: queue.hpp  queue.tpp
unsa/set/: set.hpp  set.tpp
unsa/stack/: stack.hpp  stack.tpp
unsa/unordered_map/: unordered_map.hpp  unordered_map.tpp
unsa/unordered_set/: unordered_set.hpp  unordered_set.tpp
unsa/vector/: README.md  vector.hpp  vector.tpp
